# symbolic-reasoning-circuit

./: .gitignore  LICENSE  README.md  pyproject.toml
posts/01-circuit-tracking/notebooks/: publication_figures.ipynb
posts/01-circuit-tracking/scripts/: 01_accuracy_sweep.py  02_cma_sweep.py  03_rescue_patching.py
posts/02-qk-attribution/notebooks/: qk_feature_causal.py  qk_feature_explorer.py
posts/02-qk-attribution/scripts/: 01_generate_eval_prompts.py  02_qk_attribution.py  03_batch_causal_intervention.py
results/causal_interventions/2shot/: L14H0_feat16986_ABB_batch.json  L14H0_feat4958_ABA_batch.json
results/qk_ov_attribution/width_16k/aba/: config.json  handoff_sa_si.json  handoff_si_ret.json
results/qk_ov_attribution/width_16k/abb/: config.json  handoff_sa_si.json  handoff_si_ret.json
results/qk_ov_attribution/width_65k/aba/: config.json  handoff_sa_si.json  handoff_si_ret.json
results/qk_ov_attribution/width_65k/abb/: config.json  handoff_sa_si.json  handoff_si_ret.json
results/shot_sweep/: accuracy_sweep.json
results/shot_sweep/10shot/: significant_heads.json
results/shot_sweep/2shot/: significant_heads.json
results/shot_sweep/2shot/rescue/: all_prob_deltas_aba.pt  flip_rate_aba.pt  prob_delta_aba.pt  rescue_aba_all.json  rescue_sig_aba.pt
results/shot_sweep/4shot/: significant_heads.json
results/shot_sweep/4shot/rescue/: all_prob_deltas_aba.pt  flip_rate_aba.pt  prob_delta_aba.pt  rescue_aba_all.json  (+1 more)
src/: causal_feature_intervention.py  cma.py  config.py  model_utils.py  prompt_generation.py  qk_ov_attribution.py  stats.py
(+246 files in other folders)
